spacing and alignment in resposnsive screen corrected

--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,13 @@ p {
 
 
 #who-we-are,
-#why-us {
+#services,
+#why-us,
+#latest-blog,
+#contact-top {
     padding: 3em 0;
+    margin-top: 3em;
+    margin-bottom: 3em;
 }
 
 .heading-container {
@@ -418,8 +423,7 @@ a:hover {
 
 /* ======== Contact Us Section Start ========= */
 #contact {
-    margin-top: -5em;
-    margin-bottom: 5em;
+    transform: translate(0%, -20%);
 }
 
 #contact-top {
@@ -435,11 +439,12 @@ a:hover {
 .contact-box {
     background-color: #01397E;
 }
+
 .contact-box-2 {
     background-color: var(--primary-color);
 }
 
-.contact-box .title-top{
+.contact-box .title-top {
     display: flex;
     justify-content: space-between;
 }
@@ -480,16 +485,17 @@ a:hover {
 #footer-top .ftr-top-box {
     margin: 10px 0px;
     background-color: var(--white);
-    border-radius: 0px; /* Optional rounded corners */
-    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1); /* Optional shadow */
-    height: 100%; /* Ensures boxes are uniform height */
+    border-radius: 0px;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+    height: 100%;
 }
 
 #footer-top .ftr-top-icon-box {
     font-size: 3em;
-    color: var(--fourth-color); 
+    color: var(--fourth-color);
     align-self: center;
 }
+
 #footer-top .ftr-top-text-box {
     align-self: center;
 }
@@ -1243,16 +1249,25 @@ textarea {
 /*-- Slider --*/
 
 #slider {
-    overflow: hidden;
+    overflow: visible;
 }
 
 .slider-caption {
-    text-align: center;
-    position: absolute;
-    width: 100%;
-    margin-top: 160px;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+}
+
+.slides li.flex-active-slide >.slider-caption {
+    opacity: 1;
+    visibility: visible;
     color: #fff;
-    font-family: 'Open Sans', sans-serif;
+    z-index: 10;
+    position: absolute;
+    top: 20%;
+    /* left: 23%; */
+    transform: translate(20%, 20%);
+    display: block !important;
 }
 
 .slider-caption h1 {
@@ -1475,12 +1490,14 @@ footer {
     background-color: #f3f3f3;
     /* border-top: 4px solid var(--primary-color); */
 }
+
 footer .subscribe-form {
-  max-width: 200px;
+    max-width: 200px;
 }
-footer .subscribe-form img{
-  width: 100%;
-  margin-left: -2em;
+
+footer .subscribe-form img {
+    width: 100%;
+    margin-left: -2em;
 }
 
 .social-bottom {
@@ -1685,6 +1702,16 @@ footer .subscribe-form img{
 
 @media screen and (max-width: 990px) {
 
+    #who-we-are,
+    #services,
+    #why-us,
+    #latest-blog,
+    #contact-top {
+        padding: 2em 0;
+        margin-top: 2em;
+        margin-bottom: 2em;
+    }
+
     .home-account {
         text-align: center;
         display: block;
@@ -1775,7 +1802,7 @@ footer .subscribe-form img{
     }
 
     .service-item {
-        margin-top: 40px;
+        margin-top: 20px;
     }
 
     .footer-title {
@@ -1837,8 +1864,27 @@ footer .subscribe-form img{
 }
 
 @media (max-width:768px) {
+
+    #who-we-are,
+    #services,
+    #why-us,
+    #latest-blog,
+    #contact-top {
+        padding: 1em 0;
+        margin-top: 1em;
+        margin-bottom: 1em;
+    }
+
+    .service-item {
+        margin-top: 20px;
+    }
+
     .heading-container {
         display: block;
+    }
+
+    .navbar-brand img {
+        max-height: 35px;
     }
 
     .data-container-2 {
@@ -1858,24 +1904,29 @@ footer .subscribe-form img{
     .primary-heading-left {
         font-size: 2.5rem;
     }
+
     .secondary-heading {
         font-size: 1.5rem;
     }
+
     .icon-box-card {
         padding: 1em;
     }
+
     #contact {
         margin-top: 0em;
     }
-    .title-top{
+
+    .title-top {
         display: block;
         text-align: left;
     }
-    .contact-box .title-top{
+
+    .contact-box .title-top {
         display: block !important;
     }
-    
-    .contact-box .title-top h4{
+
+    .contact-box .title-top h4 {
         font-size: 2em;
     }
 }
